--- a/notebooks.ipynb
+++ b/notebooks.ipynb
@@ -54,7 +54,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "plt.ion()\n",
-    "print(\"coco cola pepsi balayya bau sexyyy\")"
+    "print(\"coco cola pepsi balayya babuuu sexyyy, jai balayya jai jai balayya\")"
    ]
   },
   {
